Use scipp logger

--- a/scripts/log_producer.ipynb
+++ b/scripts/log_producer.ipynb
@@ -8,38 +8,17 @@
    "outputs": [],
    "source": [
     "import logging\n",
-    "import ipywidgets as widgets\n",
+    "import time\n",
+    "\n",
+    "import scipp as sc\n",
     "from beamlime.kafka.sink import KafkaSink, serialize_dataarray_to_f144\n",
     "from beamlime import Message, StreamId, StreamKind\n",
     "\n",
     "instrument = 'bifrost'\n",
     "\n",
-    "# Create output widget for displaying messages\n",
-    "output_widget = widgets.Output(layout={'border': '1px solid black', 'height': '500px'})\n",
-    "\n",
-    "\n",
-    "# Custom logging handler that writes to the output widget\n",
-    "class WidgetHandler(logging.Handler):\n",
-    "    def __init__(self, output_widget):\n",
-    "        super().__init__()\n",
-    "        self.output_widget = output_widget\n",
-    "\n",
-    "    def emit(self, record):\n",
-    "        msg = self.format(record)\n",
-    "        with self.output_widget:\n",
-    "            print(msg)\n",
-    "\n",
-    "\n",
-    "# Create logger that writes to the output widget\n",
-    "logger = logging.getLogger(__name__)\n",
+    "logger = sc.get_logger()\n",
     "logger.setLevel(logging.INFO)\n",
-    "# Clear any existing handlers\n",
-    "logger.handlers.clear()\n",
-    "widget_handler = WidgetHandler(output_widget)\n",
-    "widget_handler.setFormatter(\n",
-    "    logging.Formatter('%(asctime)s - %(name)s - %(levelname)s - %(message)s')\n",
-    ")\n",
-    "logger.addHandler(widget_handler)\n",
+    "logger.addHandler(sc.logging.make_widget_handler())\n",
     "\n",
     "sink = KafkaSink(\n",
     "    kafka_config={\"bootstrap.servers\": \"localhost:9092\"},\n",
@@ -56,10 +35,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import time\n",
-    "import scipp as sc\n",
-    "\n",
-    "\n",
     "def publish_now(value: float, stream_name: str):\n",
     "    \"\"\"Helper function to publish a message immediately\"\"\"\n",
     "    da = sc.DataArray(\n",
@@ -156,17 +131,25 @@
     "    step=0.01,\n",
     ")\n",
     "\n",
-    "# Display all sliders and output widget\n",
     "display(\n",
     "    widgets.VBox(\n",
     "        [\n",
     "            detector_angle_slider,\n",
     "            sample_temperature_slider,\n",
     "            magnetic_field_slider,\n",
-    "            output_widget,\n",
     "        ]\n",
     "    )\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sc.display_logs()"
    ]
   }
  ],
