Update log producer notebook so it works for Bifrost dev

--- a/scripts/log_producer.ipynb
+++ b/scripts/log_producer.ipynb
@@ -11,8 +11,8 @@
     "import time\n",
     "\n",
     "import scipp as sc\n",
-    "from beamlime.kafka.sink import KafkaSink, serialize_dataarray_to_f144\n",
-    "from beamlime import Message, StreamId, StreamKind\n",
+    "from ess.livedata.kafka.sink import KafkaSink, serialize_dataarray_to_f144\n",
+    "from ess.livedata import Message, StreamId, StreamKind\n",
     "\n",
     "instrument = 'bifrost'\n",
     "\n",
@@ -105,8 +105,8 @@
    "outputs": [],
    "source": [
     "detector_angle_slider = create_stream_slider(\n",
-    "    stream_name='detector_angle',\n",
-    "    description='Detector Angle:',\n",
+    "    stream_name='detector_rotation',\n",
+    "    description='Detector Rotation (deg):',\n",
     "    initial_value=1.2,\n",
     "    min_val=0.0,\n",
     "    max_val=10.0,\n",
@@ -122,9 +122,9 @@
     "    step=1.0,\n",
     ")\n",
     "\n",
-    "magnetic_field_slider = create_stream_slider(\n",
-    "    stream_name='magnetic_field',\n",
-    "    description='Magnetic Field (T):',\n",
+    "sample_angle_slider = create_stream_slider(\n",
+    "    stream_name='sample_rotation',\n",
+    "    description='Sample Rotation (deg):',\n",
     "    initial_value=0.0,\n",
     "    min_val=-5.0,\n",
     "    max_val=5.0,\n",
@@ -133,11 +133,7 @@
     "\n",
     "display(\n",
     "    widgets.VBox(\n",
-    "        [\n",
-    "            detector_angle_slider,\n",
-    "            sample_temperature_slider,\n",
-    "            magnetic_field_slider,\n",
-    "        ]\n",
+    "        [detector_angle_slider, sample_angle_slider, sample_temperature_slider]\n",
     "    )\n",
     ")"
    ]
